--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   <body>
 
     <header>
+      <script>
+        alert("abcdefghijklmnopqrstuvwxyz\n[]{}#%^*+=_\|~<>€£¥.,?!',‰");
+      </script>
       <div class="container">
         <h1>Ninjagolloyd.GitHub.io</h1>
         <h2></h2>
