--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <header>
       <script>
-        alert("abcdefghijklmnopqrstuvwxyz\n[]{}#%^*+=_\|~<>€£¥.,?!',‰");
+        alert("abcdefghijklmnopqrstuvwxyz\nzaqwsxcderfvbgtyhnmjuiklop");
       </script>
       <div class="container">
         <h1>Ninjagolloyd.GitHub.io</h1>
